# aethel

./: DS.py  DS_BU.py  Extraction.py  LexUtils.py  NeuralEval.py  README.md  VizUtils.py  WordType.py  WordType_NC.py  ignored.txt  pyproject.toml  setup.py  test.py
LassyExtraction/: __init__.py  aethel.py  calculus.py  extraction.py  for_disco.py  frontend.py  graphutils.py  lambdas.py  lassy.py  main.py  milltypes.py  proof_extraction.py  proofs.py  proofs_old.py  strToPol.py  terms.py  transformations.py  tree_transformations.py  unmod.py  viz.py
LassyExtraction/done/: graphutils2.py  lassy2.py  transformations2.py  viz2.py
LassyExtraction/done/mill/: tests.py  types.py
LassyExtraction/mill/: nets.py  proofs.py  serialization.py  structures.py  terms.py  types.py
LassyExtraction/utils/: copyfiles.sh  graph.py  ignored.txt  lassy.py  lexicon.py  printing.py  tex.py  to_l1.py  tools.py  viz.py  xml_splitter.py
data/: name_to_subset.tsv
examples/: 1 -- dataset.ipynb  1 -- the dataset.ipynb
nn/: Constructive.py  Constructive2.py  Constructive3.py  SeqLearner.py
scripts/: alpino_interface.py  augmentation.py  extract.py  langpro_interface.py  search.py
src/: Extraction.py  ProofNet.py  WordType.py  extraction.py  graphutils.py  lassy.py  lexicon.py  main.py  milltypes.py  proofs.py  transformations.py  viz.py
src/aethel/: __init__.py  frontend.py
src/utils/: BPE.py  PostProcess.py  ignored.txt  sample.l1  stats.py  to_l1.py  typevars.py  xml_splitter.py
utils/: FastText.py  LexUtils.py  PostProcess.py  SeqUtils.py  fastText.py
(+6 files in other folders)
